<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="com.blues.quizapp.MainActivity">

        <TextView
            style="@style/question_textView"
            android:text="@string/q1" />

        <RadioGroup
            android:id="@+id/radioGroup_choices1"
            style="@style/choices_radioGroup" />

        <TextView
            style="@style/question_textView"
            android:text="@string/q2" />

        <RadioGroup
            android:id="@+id/radioGroup_choices2"
            style="@style/choices_radioGroup" />

        <TextView
            style="@style/question_textView"
            android:text="@string/q3" />

        <RadioGroup
            android:id="@+id/radioGroup_choices3"
            style="@style/choices_radioGroup" />

        <TextView
            style="@style/question_textView"
            android:text="@string/q4" />

        <LinearLayout
            android:id="@+id/checkboxes_choices4"
            style="@style/checkBoxes_linerLayout" />

        <TextView
            style="@style/question_textView"
            android:text="@string/q5" />

        <RadioGroup
            android:id="@+id/radioGroup_choices5"
            style="@style/choices_radioGroup" />

        <TextView
            style="@style/question_textView"
            android:text="@string/last_question" />

        <EditText
            android:id="@+id/answer6_editTextView"
            style="@style/answer_EditText"/>

        <Button
            style="@style/submit_button"
            android:layout_gravity="center_horizontal" />


    </LinearLayout>
</ScrollView>
